--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,3 @@
-logging.level.com.synopsys.integration=DEBUG
+logging.level.com.synopsys.integration=INFO
 detect.blackduck.rapid.compare.mode=ALL
 blackduck.trust.cert=true
