--- a/.github/workflows/synopsys-detect.yml
+++ b/.github/workflows/synopsys-detect.yml
@@ -32,10 +32,10 @@ jobs:
           blackduck_scan_failure_severities: 'BLOCKER,CRITICAL'
           ### Uncomment below configuration to enable automatic fix pull request creation if vulnerabilities are reported
           blackduck_automation_fixpr: false
-          blackduck_automation_prcomment: true
+          #blackduck_automation_prcomment: true
           github_token: ${{ secrets.GITHUB_TOKEN }} # Mandatory when blackduck_automation_fixpr is set to 'true'
           ### Uncomment below configuration if Synopsys Bridge diagnostic files needs to be uploaded
-          # include_diagnostics: true
+          include_diagnostics: true
           #continue-on-error: blackduck_automation_prcomment
 
       - name: Black Duck PR Scan
@@ -52,7 +52,7 @@ jobs:
           blackduck_automation_prcomment: true
           github_token: ${{ secrets.GITHUB_TOKEN }} # Mandatory when blackduck_automation_prcomment is set to 'true'
           ### Uncomment below configuration if Synopsys Bridge diagnostic files needs to be uploaded
-          # include_diagnostics: true
+          include_diagnostics: true
           #continue-on-error: blackduck_automation_prcomment
           
       - name: Create Black Duck Policy
