--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,3 @@
-logging.level.com.synopsys.integration=INFO
+logging.level.com.synopsys.integration=DEBUG
 detect.blackduck.rapid.compare.mode=ALL
 blackduck.trust.cert=true
