--- a/.github/workflows/synopsys-detect.yml
+++ b/.github/workflows/synopsys-detect.yml
@@ -10,6 +10,7 @@ on:
 env:
   DETECT_PROJECT_NAME: test-git-int-ramal
   DETECT_PROJECT_VERSION_NAME: main
+  DETECT_POLICY_CHECK_FAIL_ON_SEVERITIES: ALL
   DETECT_TOOLS: DETECTOR
   DETECT_TIMEOUT: 3000
 jobs:
