--- a/.github/workflows/synopsys-detect.yml
+++ b/.github/workflows/synopsys-detect.yml
@@ -2,11 +2,9 @@
 name: bd-sig-action
 
 on:
-  push:
-    branches: [ main, master, develop, stage, release ]
   pull_request:
-    branches: [ main, master, develop, stage, release ]
-  workflow_dispatch:
+    branches: [ main]
+
 env:
   DETECT_PROJECT_NAME: test-git-int-ramal
   DETECT_PROJECT_VERSION_NAME: main
@@ -20,19 +18,6 @@ jobs:
       - name: Checkout Source
         uses: actions/checkout@v3
 
-      - name: Black Duck Full Scan
-        if: ${{ github.event_name != 'pull_request' }}
-        uses: synopsys-sig/synopsys-action@v1.2.0
-        env:
-          DETECT_EXCLUDED_DETECTOR_TYPES: GIT
-        with:
-          include_diagnostics: true
-          blackduck_url: ${{ secrets.BLACKDUCK_URL }}
-          blackduck_apiToken: ${{ secrets.BLACKDUCK_API_TOKEN }}
-          blackduck_scan_full: false
-          blackduck_automation_prcomment: true
-          github_token: ${{ secrets.GITHUB_TOKEN }} 
-
       - name: Black Duck PR Scan
         if: ${{ github.event_name == 'pull_request' }}
         uses: synopsys-sig/synopsys-action@v1.2.0
@@ -43,17 +28,6 @@ jobs:
           include_diagnostics: true
           blackduck_url: ${{ secrets.BLACKDUCK_URL }}
           blackduck_apiToken: ${{ secrets.BLACKDUCK_API_TOKEN }}
-          blackduck_scan_full: true
-          ### Below configuration is used to enable automatic pull request comment based on Black Duck scan result
+          blackduck_scan_full: false
           blackduck_automation_prcomment: true
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          
-      - name: Create Black Duck Policy
-        env:
-          NODE_EXTRA_CA_CERTS: ${{ secrets.LOCAL_CA_CERT_PATH }}
-        uses: blackducksoftware/create-policy-action@v0.0.1
-        with:
-          blackduck-url: ${{ secrets.BLACKDUCK_URL }}
-          blackduck-api-token: ${{ secrets.BLACKDUCK_API_TOKEN }}
-          policy-name: 'git-int-check'
-          no-fail-if-policy-exists: true
