--- a/.github/workflows/synopsys-detect.yml
+++ b/.github/workflows/synopsys-detect.yml
@@ -15,7 +15,7 @@ jobs:
   build:
     runs-on: self-hosted
     steps:
-      - name: Checkout Source
+      - name: Checkout Sources
         uses: actions/checkout@v3
 
       - name: Black Duck PR Scan
