--- a/.github/workflows/synopsys-detect.yml
+++ b/.github/workflows/synopsys-detect.yml
@@ -9,6 +9,7 @@ env:
   DETECT_PROJECT_NAME: test-git-int-ramal
   DETECT_PROJECT_VERSION_NAME: main
   DETECT_POLICY_CHECK_FAIL_ON_SEVERITIES: ALL
+  LOGGING_LEVEL_COM_SYNOPSYS_INTEGRATION: DEBUG
   DETECT_TOOLS: DETECTOR
   DETECT_TIMEOUT: 3000
 jobs:
