--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         with:
           include_diagnostics: true
           blackduck_url: ${{ secrets.BLACKDUCK_URL }}
-          blackduck_apiToken: ${{ secrets.BLACKDUCK_TOKEN }}
+          blackduck_token: ${{ secrets.BLACKDUCK_TOKEN }}
           blackduck_scan_full: false
-          blackduck_automation_prcomment: true
+          blackduck_prComment_enabled: true
           github_token: ${{ secrets.GITHUB_TOKEN }}
